# oxRL

./: .gitignore  BOOK.md  BUG_REPORTING.md  CLAUDE.md  DESIGN_DOC.md  FAQ.md  LICENSE  README.md  RELEASE_NOTES.md  main_rl.py  main_sl.py  marketing.md  plan.md  pyproject.toml  req.txt  requirements.txt  review.md  review_feedback.md  setup.py  train_gemma.py  verify_10_lines.py
algs/: grpo.py
arxiv_submission/: main.tex
configs/: load.py  qwen_gsm8k_2gpu.yaml  rl_args.yaml  sl_args.yaml
custom_datasets/: prompt_response.py
data/: gsm8k_mini_test.parquet  gsm8k_mini_train.parquet  gsm8k_qwen2.5-0.5b-instruct_wsp_test.parquet  gsm8k_qwen2.5-0.5b-instruct_wsp_train.parquet
datasets/: mixed_ratio_sampler.py  prompt_only.py
docs/: neurips2026_paper.tex  neurips2026_strategy.md  neurips_2026.sty  nicefrac.sty  oxrl_formal.tex  review_iterations.md  reviewer3_revision_plan.md  reviewer5_plan.md  reviewer_1.md  reviewer_2.md  reviewer_3.md  reviewer_4.md  reviewer_5.md
examples/: custom_architectures.py  oxrl_quickstart.ipynb  quickstart.py  quickstart.yaml  qwen_gsm8k_2gpu.yaml  simple_train.py
experiments/: REPRODUCE.md  build_matrix.py
misc/: utils.py
oxrl/: __init__.py  cli.py  main_rl.py  main_sl.py  trainer.py
preprocessing/: audio_dummy.py  gpqa.py  gsm8k.py  math_hard.py  mbpp.py  openr1_math.py  ultrafeedback.py  vision_dummy.py
rewards/: compute_score.py
rollouts/: replay_buffer.py  vllm_engine.py
scripts/: aggregate_results.py  auto_launch.sh  framework_comparison.md  generate_figures.py  mass_eval.sh  parallel_launcher.py  verify_model.py  (+5 more)
(+439 files in other folders)
